<resources>
    <string name="app_name">Sunway University\n Sports Organizer</string>
    <string name="enter">Enter</string>
    <string name="had_account">Existing User?</string>
    <string name="sign_in">&#160;<u>Click Here to Login</u></string>
    <string name="no_account">&#160;New User?</string>
    <string name="sign_up_now">&#160;<u>Sign Up Now</u></string>
    <string name="sign_up">&#160;Sign Up</string>
    <string name="email_address">Student Imail Address</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="event">Event</string>
    <string name="setting">Setting</string>
    <string name="forgot">FORGOT</string>
    <string name="send">SEND</string>
    <string name="reminder">Provide your account\'s email for which you want to reset your password!</string>
    <string name="account_details">Account Details</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="event_listing">Event Listing</string>
    <string name="search_bar_hint">Search with organizer name for scheduled event</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_settings_desc">Get notifications to find out what\'s going on when you\'re not online. You turn these off.</string>
    <string name="push_notification">Push Notification</string>
    <string name="push_notification_desc">Receive event updates notifications</string>
    <string name="chat_notification">Chat Notification</string>
    <string name="chat_notification_desc">Receive chat notifications</string>
    <string name="email_notification">Email Notification</string>
    <string name="email_notification_desc">Receive weekly push email notifications</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_new_password_desc">Your password must be different from previous used passwords.</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="password_hint">Must be at least 8 characters.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Both password must be match.</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_event">CREATE SPORT EVENT</string>
    <string name="event_details_hint">Beginner Level \nPlease be punctual\nGirls are welcomed</string>
    <string name="event_details">SPORT EVENT DETAILS</string>
    <string name="to">To</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start time</string>
    <string name="select_date">Select Date</string>
    <string name="sunway_university_basketball_court">Sunway University Basketball Court</string>
    <string name="venue">VENUE</string>
    <string name="participant_limit">PARTICIPANT LIMIT</string>
    <string name="eg_basketball_badminton">eg: Basketball Badminton</string>
    <string name="sport_type">SPORTS</string>
    <string name="event_cancelation"><![CDATA[Event Cancellations and Changes: Events may be subject to changes in timing, venue, or cancellation due to unforeseen circumstances, including weather conditions. Participants will be notified via the platform or contact details provided during registration.]]></string>
    <string name="personal_responsibility">Personal Responsibility: By joining any event, participants acknowledge that they are participating at their own risk. The event organizers and the platform are not liable for any injuries, damages, or losses sustained during the event.</string>
    <string name="join_event">JOIN SPORT EVENT</string>
    <string name="quit_event">SPORT EVENT JOINED! CLICK HERE TO QUIT!</string>
    <string name="my_events">My Sport Events</string>
    <string name="news_title">News Title</string>
    <string name="short_description_of_the_news_goes_here">Short description of the news goes here.</string>
    <string name="delete">Delete</string>
    <string name="sports_news">Sports News</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="username">USERNAME</string>
    <string name="gender">GENDER</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="last_updated">LAST UPDATED</string>
    <string name="news">NEWS</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="category">CATEGORY</string>
    <string name="participants">PARTICIPANTS</string>
    <string name="organizer">ORGANIZER</string>
    <string name="location">LOCATION</string>
    <string name="date">DATE</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="manage_events">Manage Events</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_news">Manage News</string>
    <string name="log_out">Log Out</string>
    <string name="news_description">News Description</string>
    <string name="create_news">Create News</string>
    <string name="favourite_sports">FAVOURITE SPORTS</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="cancel_event">DELETE</string>
    <string name="save_event">SAVE</string>
    <string name="expired">Expired</string>
    <string name="sport_event_listing">Sport Event Listing</string>
    <string name="clear">Clear</string>
    <string name="no_events_found">No Events Found</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="edit">Edit</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="mandarin">Mandarin</string>
    <string name="bahasa_melayu">Bahasa Melayu</string>
    <string name="view_participant_list"><u>View Participant List</u></string>
    <string name="booking_schedule_list"><u>Booking Schedule List</u></string>
    <string name="type_a_message">Type a message</string>

</resources>