<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.event.EventFragment">

    <TextView
        android:id="@+id/tv_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Create Event"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Add ScrollView to enable scrolling -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_event">

        <!-- ConstraintLayout wrapped inside ScrollView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/iv_sports" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event_type"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <Spinner
                android:id="@+id/spinner_event_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:hint="@string/eg_basketball_badminton"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_type" />

            <TextView
                android:id="@+id/tv_participant_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/participant_limit"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_event_type" />

            <EditText
                android:id="@+id/et_participant_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:hint="10"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_participant_limit" />

            <TextView
                android:id="@+id/tv_venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/venue"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_participant_limit" />

            <Spinner
                android:id="@+id/spinner_venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:hint="@string/sunway_university_basketball_court"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_venue" />

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event_date_and_time"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_venue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/et_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitesmoke"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/select_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_date" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/et_event_start_time"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/whitesmoke"
                android:hint="@string/start_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_event_date" />

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                app:layout_constraintBottom_toBottomOf="@+id/et_event_end_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_event_end_time" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/et_event_end_time"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whitesmoke"
                android:hint="@string/end_time"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_event_start_time"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event_details"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_event_end_time" />

            <EditText
                android:id="@+id/et_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/et_background"
                android:hint="@string/event_details_hint"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_create_event"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_details" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_register"
                android:text="@string/create_event"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
